--- a/main.html
+++ b/main.html
@@ -4,10 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<label>
+		<input type="radio", value="New Delhi">New Delhi</input>
+		<br>
+		<input type="radio", value="Mumbai">Mumbai</input>
+	</label>
+
+	<blockquote>
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
