--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<input type="radio", value="Mumbai">Mumbai</input>
 	</label>
 
-	<blockquote>
-		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	<blockquote cite="https://course.acciojob.com/journey">
+		New Delhi is the capital of India and an administrative district of NCT Delhi. Refrence from <a href="https://course.acciojob.com/journey">Wikipedia</a> 
 	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
